test_suite/tests/ui/unsupported/union_ser.stderr
error: Serde does not support derive for unions
 --> tests/ui/unsupported/union_ser.rs:4:1
  |
3 |   #[derive(Deserialize)]
  |            ----------- in this derive macro expansion
4 | / union Union {
5 | |     x: u8,
6 | |     y: (),
7 | | }
  | |_^
  |
  = note: this error originates in the derive macro `Deserialize` (in Nightly builds, run with -Z macro-backtrace for more info)
